primer y segunda seccion

--- a/index.html
+++ b/index.html
@@ -11,5 +11,35 @@
 </head>
 <body>
     
+    <header>
+        <h1 class="logos"><a href="#">Website Logo</a></h1>
+        <nav>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contacts</a></li>
+        </nav>
+    </header>
+    <section class="principal">
+        <div class="fondo"></div>
+        <h2 class="title">Responsive Flexbox Template</h2>
+        <h3>A freebie by Tutorialzine.</h3>
+        <a href="#" class="button">Download it Here</a>
+    </section>
+
+    <section class="work text-center">
+        <h3>Some of our work</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+        <hr>
+
+        <div class="imgenes">
+            <img src="img/coast.jpg">
+             <img src="img/island.jpg">
+              <img src="img/coast.jpg">
+               <img src="img/coast.jpg">
+            
+        </div>
+    </section>
+
 </body>
 </html>
